--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<!-- Header -->
 			<section id="header">
 				<header>
-					<span class="image avatar"><img src="images/avatar.png" alt="Me" /></span>
+					<span class="image avatar"><img src="/images/avatar.png" alt="Me" /></span>
 					<h1 id="logo"><a href="#">Claudia Muñoz</a></h1>
 					<p>Web Portfolio<br />
 					Get to know me as a Person, you won't regret it =)</p>
@@ -49,7 +49,7 @@
 						<!-- One -->
 							<section id="one">
 								<div class="image main" data-position="center">
-									<img src="images/banner-upd.jpg" alt="Main Banner image" />
+									<img src="/images/banner-upd.jpg" alt="Main Banner image" />
 									<ul id="ani-list">
 										<li style="display: inline-block;">Legacy Support</li>
 										<li style="display: none;">Supporting major web browsers</li>
