--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
 										<li>CSS animated widgets</li>
 										<li>JS Form validations</li>
 										<li>Maintenance and creation of WP sites + PHP modified templates</li>
+										<li>Websites using Jeckyll + Git/Github, SASS, HTML and CSS</li>
 									</ul>
 									<h4>Graphic Design/Translations</h4>
 									<ul>
