--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 							<h2>About Me</h2>
 							<h3>Training and Experience</h3>
 							<ul>
-								<li>Bachelor in Computing Engineering</li>
+								<li>Bachelor in Computer Engineering</li>
 								<li>10+ years of experience</li>
 								<li>Worked and created visually stunning sites from scratch</li>
 							</ul>
@@ -131,7 +131,7 @@
 							<li>Amazon API Gateway</li>
 							<li>AWS Amplify</li>
 						</ul>
-						<h4>BD</h4>
+						<h4>Data Base</h4>
 						<ul>
 							<li>Transact-SQL</li>
 							<li>Reporting Services</li>
@@ -217,13 +217,13 @@
 		</div>
 
 		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+		<script src="assets/js/jquery.min.js"></script>
+		<script src="assets/js/jquery.scrollex.min.js"></script>
+		<script src="assets/js/jquery.scrolly.min.js"></script>
+		<script src="assets/js/browser.min.js"></script>
+		<script src="assets/js/breakpoints.min.js"></script>
+		<script src="assets/js/util.js"></script>
+		<script src="assets/js/main.js"></script>
 
 	</body>
 </html>
