add new avatar 2025

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<!-- Header -->
 		<section id="header">
 			<header>
-				<span class="image avatar"><img src="./images/avatar.png" alt="Me" /></span>
+				<span class="image avatar"><img src="./images/avatar2.png" alt="Me" /></span>
 				<h1 id="logo"><a href="#">Suleyka Juárez</a></h1>
 				<p>Web Portfolio<br />
 				Get to know me as a Person, you won't regret it =)</p>
